// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StatusIcon render for FAIL 1`] = `
<StyledIconBase
  aria-live="polite"
  ariaLabel="Failed requirement"
  className="status-icon negative-outcome-icon"
  iconName="StatusErrorFull"
/>
`;

exports[`StatusIcon render for PASS 1`] = `
<StyledIconBase
  aria-live="polite"
  ariaLabel="Passed test"
  className="status-icon positive-outcome-icon"
  iconName="completedSolid"
/>
`;

exports[`StatusIcon render for PASS with extra class name 1`] = `
<StyledIconBase
  aria-live="polite"
  ariaLabel="Passed test"
  className="status-icon positive-outcome-icon test"
  iconName="completedSolid"
/>
`;

exports[`StatusIcon render for UNKNOWN 1`] = `
<StyledIconBase
  aria-live="polite"
  ariaLabel="Incomplete requirement"
  className="status-icon"
  iconName="circleRing"
/>
`;

exports[`StatusIcon render for default 1`] = `
<StyledIconBase
  aria-live="polite"
  ariaLabel="Incomplete requirement"
  className="status-icon"
  iconName="circleRing"
/>
`;
